# rust_items_restapi

./: Cargo.toml  README.md
migrations/: 20251214083520_create_items.sql
src/: config.rs  main.rs  state.rs
src/db/: postgres.rs
src/dto/: items.rs
src/models/: items.rs  mod.rs  prelude.rs
src/routers/: items.rs  mod.rs
src/services/: items.rs
