[package]
name = "first"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
dotenv = "0.15.0"
envy = "0.4.2"
postgres = "0.19.12"
sea-orm = {version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-native-tls"]}
sea-orm-macros = "1.1.19"
serde = {version = "1.0.228", features = ["derive"]}
tokio = {version = "1.48.0", features = ["full"]}
